--- a/ASP.Claims.API/ASP.Claims.API.csproj
+++ b/ASP.Claims.API/ASP.Claims.API.csproj
@@ -16,6 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include=".gitignore" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
     <PackageReference Include="AutoMapper" Version="15.1.0" />
     <PackageReference Include="FluentResults" Version="4.0.0" />
