auth and tests done

--- a/ASP.Claims.API/appsettings.json
+++ b/ASP.Claims.API/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "KeyVault": {
+    "Url": "https://asp-claims-api-keyvault.vault.azure.net/",
+    "JwtSecretName": "ASP-Claims-API-JWT"
+  },
+  "Jwt": {
+    "Issuer": "ContosoApi",
+    "Audience": "ContosoApiUsers"
+  },
   "AllowedHosts": "*"
 }
