--- a/ASP.Claims.API/ASP.Claims.API.csproj
+++ b/ASP.Claims.API/ASP.Claims.API.csproj
@@ -50,4 +50,11 @@
     </EmbeddedResource>
   </ItemGroup>
 
+	<ItemGroup>
+		<None Include="..\ASP.Claims.API.Test\appsettings.Test.json">
+			<Link>appsettings.Test.json</Link>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+
 </Project>
