web config update

--- a/ASP.Claims.API/web.config
+++ b/ASP.Claims.API/web.config
@@ -3,6 +3,6 @@
 		<handlers>
 			<add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
 		</handlers>
-		<aspNetCore processPath="dotnet" arguments=".\ASP.Claims.API.dll" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
+		<aspNetCore processPath="dotnet" arguments=".\ASP.Claims.API.dll" stdoutLogEnabled="true" stdoutLogFile="\\?\%home%\LogFiles\stdout" />
 	</system.webServer>
 </configuration>
