--- a/ASP.Claims.API/web.config
+++ b/ASP.Claims.API/web.config
@@ -3,6 +3,10 @@
 		<handlers>
 			<add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
 		</handlers>
-		<aspNetCore processPath="dotnet" arguments=".\ASP.Claims.API.dll" stdoutLogEnabled="true" stdoutLogFile="\\?\%home%\LogFiles\stdout" />
+		<aspNetCore processPath="dotnet" arguments=".\ASP.Claims.API.dll" stdoutLogEnabled="true" stdoutLogFile="\\?\%home%\LogFiles\stdout" hostingModel="inprocess">
+			<environmentVariables>
+				<environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Production" />
+			</environmentVariables>
+		</aspNetCore>
 	</system.webServer>
 </configuration>
